manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: main
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: ImplementationSpecific
        backend:
          service:
            name: ping-pong-service
            port:
              name: http
      - path: /main
        pathType: ImplementationSpecific
        backend:
          service:
            name: hashgenerator-service
            port:
              name: http
